--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,30 @@
   --accent-color: #ff6c00;
 }
 
+h1,
+h2,
+h3,
+h4,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
+
+button {
+  cursor: pointer;
+}
+
 .list {
   list-style: none;
 }
@@ -20,14 +44,34 @@ body {
   font-family: var(--primary-font);
 }
 
+.section {
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 /* ==================== COMPONENTS ==================== */
 .modal-btn {
+  min-width: 160px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
   font-weight: 600;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.09em;
   text-transform: uppercase;
-  cursor: pointer;
+  background-color: transparent;
 }
 
 .modal-btn:hover,
@@ -56,6 +100,7 @@ body {
   line-height: 1.36;
   letter-spacing: 0.1em;
   text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .suptitle-theme-dark {
@@ -90,15 +135,45 @@ body {
 }
 
 .title-theme-dark {
+  margin-bottom: 44px;
   color: var(--secondary-text-color-theme-dark);
 }
 
 .title-theme-light {
+  margin-bottom: 20px;
   color: var(--secondary-text-color-theme-light);
 }
 /* ==================== /COMPONENTS ==================== */
 
 /* ==================== HEADER ==================== */
+.page-header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.page-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.page-nav {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 71px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 40px;
+}
+
 .menu-link {
   font-weight: 600;
   font-size: 12px;
@@ -116,6 +191,8 @@ body {
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.1em;
+  margin-left: auto;
+  margin-right: 40px;
 }
 
 .contact-phone-number:hover,
@@ -175,6 +252,37 @@ body {
 /* ==================== /ADVANTAGES ==================== */
 
 /* ==================== EMPLOYEES ==================== */
+.employees-section {
+  background-color: #f7f7f7;
+}
+
+.employees-title {
+  margin-bottom: 44px;
+}
+
+.employees {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  /* justify-content: space-between; */
+}
+
+.employees-card {
+  flex-basis: calc((100% - 60px) / 3);
+}
+
+/* .employees-card:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.employees-card:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+} */
+
+.employees-card-content-wrapper {
+  padding-top: 30px;
+}
+
 .employees-name {
   font-weight: 400;
   font-size: 18px;
@@ -182,6 +290,7 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color-theme-light);
+  margin-bottom: 8px;
 }
 
 .employees-position {
