--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,17 @@ body {
   padding-right: 15px;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
 /* ==================== COMPONENTS ==================== */
 .modal-btn {
   min-width: 160px;
@@ -93,6 +104,15 @@ body {
   align-items: center;
 }
 
+.media-list::before {
+  flex-shrink: 0;
+  width: 60px;
+  height: 1px;
+  content: '';
+  margin-right: 40px;
+  background-color: var(--secondary-text-color-theme-light);
+}
+
 .media-list-link {
   font-weight: 600;
   font-size: 11px;
@@ -126,7 +146,6 @@ body {
   display: block;
   width: 60px;
   height: 1px;
-  background-color: tomato;
   content: '';
   margin-right: 20px;
 }
@@ -172,7 +191,7 @@ body {
 
 .title-theme-dark {
   margin-bottom: 44px;
-  /* color: var(--secondary-text-color-theme-dark); */
+  color: var(--secondary-text-color-theme-dark);
 }
 
 .title-theme-light {
@@ -307,24 +326,51 @@ body {
 /* ==================== /ABOUT ==================== */
 
 /* ==================== SERVICES ==================== */
+.services {
+  background-color: #111319;
+  background-image: url('../images/services/bg.png');
+  background-size: cover;
+}
+
 .services-table-wrapper {
   display: flex;
+  margin-bottom: 50px;
 }
 
 .services-table {
   flex-basis: 50%;
   padding: 30px 40px;
-  margin-bottom: 50px;
-  border: 1px solid #cccccc;
+}
+
+.services-table:first-child {
+  background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+
+.services-table:last-child {
+  background-image: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
 }
 
 .services-table-row {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
+}
+
+.services-table-row::before {
+  flex-grow: 1;
+  height: 1px;
+  content: '';
+  margin-right: 6px;
+  margin-left: 6px;
+  background-color: rgba(157, 164, 189, 0.12);
 }
 
 .services-table-row:not(:last-child) {
   margin-bottom: 20px;
+}
+
+.services-table-name {
+  order: -1;
 }
 
 .services-table-name,
