--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,36 @@ img {
   color: rgb(85, 85, 85);
   line-height: 1.846;
 }
+
+.team-list-link-wrapper {
+  display: block;
+}
+
+.team-list-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  transform: translate(0, 100%);
+  transition: transform 500ms linear;
+
+  font-size: 14px;
+  color: #ffffff;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: rgba(255, 99, 71, 0.5);
+}
+
+.team-list-link-wrapper:hover .overlay,
+.team-list-link-wrapper:focus .overlay {
+  transform: translate(0, 0);
+}
