--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --secondary-text-color-theme-dark: #ffffff;
   --secondary-text-color-theme-light: #303030;
   --accent-color: #ff6c00;
+  --transition-dur-and-func: 250ms linear;
 }
 
 h1,
@@ -83,6 +84,7 @@ body {
   letter-spacing: 0.09em;
   text-transform: uppercase;
   background-color: transparent;
+  transition: color var(--transition-dur-and-func), background-color var(--transition-dur-and-func);
 }
 
 .modal-btn-theme-dark {
@@ -201,7 +203,10 @@ body {
 /* ==================== /COMPONENTS ==================== */
 
 /* ==================== HEADER ==================== */
+
 .page-header {
+  position: absolute;
+  width: 100%;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -234,6 +239,8 @@ body {
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.1em;
+  color: var(--secondary-text-color-theme-dark);
+  transition: color var(--transition-dur-and-func);
 }
 
 .menu-link:hover,
@@ -248,6 +255,8 @@ body {
   letter-spacing: 0.1em;
   margin-left: auto;
   margin-right: 40px;
+  color: var(--secondary-text-color-theme-dark);
+  transition: color var(--transition-dur-and-func);
 }
 
 .contact-phone-number:hover,
@@ -583,3 +592,62 @@ body {
   color: var(--primary-text-color-theme-dark);
 }
 /* ==================== /FOOTER ==================== */
+
+/* ==================== MODAL WINDOW ==================== */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 580px;
+  background-color: rgb(255, 255, 255);
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid #555555;
+  padding: 0;
+  transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-close-btn-icon {
+  transition: fill var(--transition-dur-and-func);
+}
+
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--accent-color);
+}
+/* ==================== /MODAL WINDOW ==================== */
