--- a/css/styles.css
+++ b/css/styles.css
@@ -120,8 +120,8 @@ body {
   font-size: 11px;
   line-height: 1.36;
   letter-spacing: 0.2em;
-
   color: var(--secondary-text-color-theme-light);
+  transition: color var(--transition-dur-and-func);
 }
 
 .media-list-item:not(:last-child) {
@@ -271,7 +271,16 @@ body {
 }
 
 .hero-left-side {
+  display: flex;
+  align-items: flex-end;
   width: 100px;
+  padding-left: 26px;
+  padding-bottom: 40px;
+}
+
+.hero-media-list {
+  transform: rotate(-90deg) translateX(-18px);
+  transform-origin: left top;
 }
 
 .hero-right-side {
@@ -516,6 +525,7 @@ body {
   height: 44px;
   border-radius: 50%;
   background-color: #ffffff;
+  transition: background-color var(--transition-dur-and-func);
 }
 
 .social-list-link:hover,
@@ -525,6 +535,7 @@ body {
 
 .socail-list-icon {
   fill: #303030;
+  transition: fill var(--transition-dur-and-func);
 }
 
 .social-list-link:hover .socail-list-icon,
