--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -13,9 +13,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %align;
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -23,18 +21,18 @@
   border: 1px solid #555555;
   padding: 0;
   transition: border-color var(--transition-dur-and-func);
-}
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-  border-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+  }
 }
 
 .modal-close-btn-icon {
   transition: fill var(--transition-dur-and-func);
-}
 
-.modal-close-btn:hover .modal-close-btn-icon,
-.modal-close-btn:focus .modal-close-btn-icon {
-  fill: var(--accent-color);
+  .modal-close-btn:hover &,
+  .modal-close-btn:focus & {
+    fill: var(--accent-color);
+  }
 }
