--- a/retina-images/css/style.css
+++ b/retina-images/css/style.css
@@ -38,19 +38,55 @@ body {
   height: 100vh;
 }
 
-.banner {
-  min-height: 600px;
-  background-image: url('../images/car.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 /* 
 1x - 96dpi
 2x - 192dpi
 3x - 288dpi
 */
+
+.banner {
+  min-height: 600px;
+  background-image: url('../images/car-mobile.jpg');
+  background-position: center top;
+  background-size: 960px 576px;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .banner {
+    background-image: url('../images/car-mobile@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .banner {
+    background-image: url('../images/car-tablet.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .banner {
+    background-image: url('../images/car-tablet@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .banner {
+    background-image: url('../images/car-desktop.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .banner {
+    background-image: url('../images/car-desktop@2x.jpg');
+  }
+}
 
 .team-list {
   display: flex;
