--- a/css/main.css
+++ b/css/main.css
@@ -68,13 +68,69 @@ body {
 }
 
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 448px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 720px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    max-height: 796px;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    background-color: bisque;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 500ms linear, visibility 500ms linear;
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu__container {
+    position: relative;
+    padding-left: 25px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 48px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
 .modal-btn {
   min-width: 160px;
   padding-top: 12px;
@@ -365,11 +421,28 @@ body {
   color: #ffffff;
 }
 
+@media screen and (max-width: 1199px) {
+  .contact-phone-number {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+  .page-header__modal-btn {
+    display: none;
+  }
+  .mobile-menu-open {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+}
 .page-header {
-  position: absolute;
-  width: 100%;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .page-header-container {
@@ -378,50 +451,66 @@ body {
   justify-content: space-between;
 }
 
-.page-nav {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .page-header {
+    background-color: #303030;
+  }
+  .mobile-menu-open {
+    display: none;
+  }
+  .page-nav {
+    display: flex;
+    align-items: center;
+  }
+  .page-header__logo {
+    margin-right: 70px;
+  }
+  .menu {
+    display: flex;
+    align-items: center;
+  }
+  .menu__item:not(:last-child) {
+    margin-right: 24px;
+  }
+  .menu__link {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.1em;
+    color: var(--secondary-text-color-theme-dark);
+    transition: color var(--transition-dur-and-func);
+  }
+  .menu__link:hover, .menu__link:focus {
+    color: var(--accent-color);
+  }
 }
-
-.page-header__logo {
-  margin-right: 71px;
+@media screen and (min-width: 1200px) {
+  .page-header {
+    position: absolute;
+    width: 100%;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .page-header-container {
+    justify-content: flex-start;
+  }
+  .menu__item:not(:last-child) {
+    margin-right: 40px;
+  }
+  .contact-phone-number {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.1em;
+    margin-left: auto;
+    margin-right: 40px;
+    color: var(--secondary-text-color-theme-dark);
+    transition: color var(--transition-dur-and-func);
+  }
+  .contact-phone-number:hover, .contact-phone-number:focus {
+    color: var(--accent-color);
+  }
 }
-
-.menu {
-  display: flex;
-  align-items: center;
-}
-
-.menu__item:not(:last-child) {
-  margin-right: 40px;
-}
-
-.menu__link {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-  color: var(--secondary-text-color-theme-dark);
-  transition: color var(--transition-dur-and-func);
-}
-.menu__link:hover, .menu__link:focus {
-  color: var(--accent-color);
-}
-
-.contact-phone-number {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-  margin-left: auto;
-  margin-right: 40px;
-  color: var(--secondary-text-color-theme-dark);
-  transition: color var(--transition-dur-and-func);
-}
-.contact-phone-number:hover, .contact-phone-number:focus {
-  color: var(--accent-color);
-}
-
 .hero-container {
   display: flex;
 }
