--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,31 @@
+// 0px - 1199px
+@media screen and (max-width: 1199px) {
+  .contact-phone-number {
+    display: none;
+  }
+}
+
+// 0px - 767px
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+
+  .page-header__modal-btn {
+    display: none;
+  }
+
+  .mobile-menu-open {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+}
+
 .page-header {
-  position: absolute;
-  width: 100%;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .page-header-container {
@@ -11,54 +34,77 @@
   justify-content: space-between;
 }
 
-.page-nav {
-  display: flex;
-  align-items: center;
-}
+@media screen and (min-width: 768px) {
+  .page-header {
+    background-color: #303030;
+  }
 
-// .logo {
-//   margin-right: 71px;
-// }
+  .mobile-menu-open {
+    display: none;
+  }
 
-.page-header__logo {
-  margin-right: 71px;
-}
+  .page-nav {
+    display: flex;
+    align-items: center;
+  }
 
-.menu {
-  display: flex;
-  align-items: center;
-}
+  .page-header__logo {
+    margin-right: 70px;
+  }
 
-.menu__item:not(:last-child) {
-  margin-right: 40px;
-}
+  .menu {
+    display: flex;
+    align-items: center;
+  }
 
-.menu__link {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-  color: var(--secondary-text-color-theme-dark);
-  transition: color var(--transition-dur-and-func);
+  .menu__item:not(:last-child) {
+    margin-right: 24px;
+  }
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+  .menu__link {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.1em;
+    color: var(--secondary-text-color-theme-dark);
+    transition: color var(--transition-dur-and-func);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
   }
 }
 
-.contact-phone-number {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-  margin-left: auto;
-  margin-right: 40px;
-  color: var(--secondary-text-color-theme-dark);
-  transition: color var(--transition-dur-and-func);
+@media screen and (min-width: 1200px) {
+  .page-header {
+    position: absolute;
+    width: 100%;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+  .page-header-container {
+    justify-content: flex-start;
+  }
+
+  .menu__item:not(:last-child) {
+    margin-right: 40px;
+  }
+
+  .contact-phone-number {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.1em;
+    margin-left: auto;
+    margin-right: 40px;
+    color: var(--secondary-text-color-theme-dark);
+    transition: color var(--transition-dur-and-func);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
   }
 }
